--- a/public_html/caleb-css-animations/test.css
+++ b/public_html/caleb-css-animations/test.css
@@ -1,10 +1,92 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Jun 8, 2015, 2:01:40 PM
-    Author     : The King's Wit
-*/
-
+#wrapper {
+  width:760px;
+  margin:0 auto;
+  text-align:center;
+  padding-top:50px;
+}
+ul#index-cards {
+  margin-top:50px;
+  text-align:center;
+}
+  
+ul#index-cards li {
+  background:brown repeat;
+  height:450px;
+  width:130px;
+  display:block;
+  float:left;
+  border:1px solid #666;
+  padding:25px 10px;
+  position:relative;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-box-shadow: 2px 2px 10px #000;
+  -webkit-box-shadow: 2px 2px 10px #000;
+  -moz-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+}
+#card-1 {
+  -webkit-transform: rotate(-20deg);
+  -moz-transform: rotate(-20deg);
+  z-index:1;
+  left:150px;
+  top:40px;
+}
+  
+#card-2 {
+  -webkit-transform: rotate(-10deg);
+  -moz-transform: rotate(-10deg);
+  z-index:2;
+  left:70px;
+  top:10px;
+}
+  
+#card-3 {
+  background-color:#69732B;
+  z-index:3;
+}
+  
+#card-4 {
+  -webkit-transform: rotate(10deg);
+  -moz-transform: rotate(10deg);
+  z-index:2;
+  right:70px;
+  top:10px;
+}
+ul#index-cards li:hover {
+  z-index:4;
+}
+  
+#card-1:hover {
+  -moz-transform: scale(1.1) rotate(-18deg);
+     -webkit-transform: scale(1.1) rotate(-18deg); 
+}
+    
+#card-2:hover {
+  -moz-transform: scale(1.1) rotate(-8deg);
+   -webkit-transform: scale(1.1) rotate(-8deg); 
+}
+  
+#card-3:hover {
+  -moz-transform: scale(1.1) rotate(2deg);
+   -webkit-transform: scale(1.1) rotate(2deg); 
+}
+  
+#card-4:hover {
+  -moz-transform: scale(1.1) rotate(12deg);
+   -webkit-transform: scale(1.1) rotate(12deg); 
+}
+ul#index-cards li img {
+  margin-top:7px;
+  background:#eee;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-box-shadow: 0px 0px 5px #aaa;
+  -webkit-box-shadow: 0px 0px 5px #aaa;
+}
+      
+ul#index-cards li p {
+  margin-top:4px;
+  text-align:left;
+  line-height:28px;  
+}
